Adjust color to fix contrast issues.

--- a/scss/abstracts/_tokens.scss
+++ b/scss/abstracts/_tokens.scss
@@ -63,7 +63,8 @@ $card-box-shadow: $box-shadow-1;
 $card-stats-background: $color-primary-300;
 $card-stats-border-radius: $border-radius-1;
 $card-link-color: $color-primary-500;
-$card-title-link-color: $color-accent-300;
+$card-title-link-color: $color-accent-200;
+$card-title-link-color-light: $color-accent-300;
 
 // Form Defaults
 $form-background-default: $color-primary-100;
